objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Approval_Threshold__c</fullName>
        <defaultValue>0.15</defaultValue>
        <inlineHelpText>Maximum discount allowed by sales rep before manager approval is required.</inlineHelpText>
        <label>Approval Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approvals__c</fullName>
        <label>Approvals</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>ETL</fullName>
                </value>
                <value>
                    <fullName>UL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attribute_1__c</fullName>
        <label>Conferencing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conference Room-in-a-Box</fullName>
                </value>
                <value>
                    <fullName>Projectors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attribute_2__c</fullName>
        <label>Portable Audio</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Headphones</fullName>
                </value>
                <value>
                    <fullName>Desktop Audio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attribute_3__c</fullName>
        <label>Home Audio</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Speakers</fullName>
                </value>
                <value>
                    <fullName>Multi-Room Audio</fullName>
                </value>
                <value>
                    <fullName>Home Theatre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_to_Guest_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available to Guest Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Badge1_Label__c</fullName>
        <description>Add a label to your badge when your badge type is Generic, Free shipping or quantity</description>
        <label>Badge1_Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Badge1_Type__c</fullName>
        <description>Promotional badge for Product</description>
        <label>Badge1_Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generic Badge</fullName>
                </value>
                <value>
                    <fullName>Price Discount Badge</fullName>
                </value>
                <value>
                    <fullName>Free Shipping Badge</fullName>
                </value>
                <value>
                    <fullName>Product Quantity Badge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Badge2_Label__c</fullName>
        <label>Badge2_Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Badge2_Type__c</fullName>
        <label>Badge2_Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generic Badge</fullName>
                </value>
                <value>
                    <fullName>Price Discount Badge</fullName>
                </value>
                <value>
                    <fullName>Free Shipping Badge</fullName>
                </value>
                <value>
                    <fullName>Product Quantity Badge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Middle Market</fullName>
                </value>
                <value>
                    <fullName>SMB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQImage__c</fullName>
        <description>IF(CONTAINS(Image_URL__c,&quot;.&quot;), 

IF(ISBLANK(Image_URL__c), ProductImageRelatedList__c, 

(IF(ISBLANK(Image_URL__c),  ProductImageRelatedList__c ,IMAGE(&quot;/servlet/servlet.ImageServer?id=&quot; + Product_Picture_ID_URL__c + &quot;&amp;oid=&quot; + $Organization.Id , &quot;&quot;, 100, 100)))),ProductImageRelatedList__c)</description>
        <formula>IF(CONTAINS(Image_URL__c,&quot;.&quot;)
,
IMAGE(Image_URL__c,&quot;&quot;,100,100)
,
	IF(ISBLANK(Image_URL__c)
	,
		 ProductImageRelatedList__c 
	,
		IMAGE(&quot;/servlet/servlet.ImageServer?id=&quot; + Product_Picture_ID_URL__c + &quot;&amp;oid=&quot; + $Organization.Id , &quot;&quot;, 100, 100)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>-</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ETA__c</fullName>
        <label>ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End_Date_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExpectedLifespanUOM__c</fullName>
        <label>ExpectedLifespanUOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpectedLifespan__c</fullName>
        <label>ExpectedLifespan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpectedLifetimeUsageUOM__c</fullName>
        <label>ExpectedLifetimeUsageUOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpectedLifetimeUsage__c</fullName>
        <label>ExpectedLifetimeUsage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GFCI_Safety_Circuit__c</fullName>
        <label>GFCI Safety Circuit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guided_Selling__c</fullName>
        <inlineHelpText>Field used to filter products for Guided Selling.</inlineHelpText>
        <label>Guided Selling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kits</fullName>
                </value>
                <value>
                    <fullName>Turbines</fullName>
                </value>
                <value>
                    <fullName>Batteries</fullName>
                </value>
                <value>
                    <fullName>Battery Tools</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Software Licenses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image_Height__c</fullName>
        <label>Image Height</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Width__c</fullName>
        <label>Image Width</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <inlineHelpText>Post an image (200px wide, transparent .PNG recommended) in the &quot;Product Images&quot; folder of Documents.  Copy the Record ID (in the URL) of the new document and paste it here.</inlineHelpText>
        <label>Image ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Level__c</fullName>
        <label>Inventory Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsFreeShippingBadge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this while selecting Free shipping badge</description>
        <label>IsFreeShippingBadge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Additional_Details__c</fullName>
        <description>Used in the custom Catalog UI found in the Order Console.</description>
        <label>Additional Details</label>
        <length>32768</length>
        <translateData>true</translateData>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_Features__c</fullName>
        <description>Used in the custom Catalog UI found in the Order Console.</description>
        <label>Features</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_Long_Description__c</fullName>
        <label>Item Long Description</label>
        <length>32768</length>
        <translateData>true</translateData>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_MSRP__c</fullName>
        <label>Item MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Short_Description__c</fullName>
        <label>Item Short Description</label>
        <length>255</length>
        <translateData>true</translateData>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Specifications__c</fullName>
        <description>Used in the custom Catalog UI found in the Order Console.</description>
        <label>Specifications</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Product Model</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_Source__c</fullName>
        <label>Power Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electric</fullName>
                </value>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>Wind</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductImageRelatedList__c</fullName>
        <formula>IMAGE(purl__c, &quot;No Image&quot;, 50, 50 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Catalog__c</fullName>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <description>Used by the Org Customizer (Heroku) to display photos of products.</description>
        <formula>IMAGE(purl__c , &quot;No Image&quot;, 300, 512)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Picture_ID_URL__c</fullName>
        <inlineHelpText>CPQ Demo Image URL</inlineHelpText>
        <label>Product Picture ID URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_Gift_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the product type is eGift card</description>
        <label>Product_Type_Gift_Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT_Description__c</fullName>
        <label>RT Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SDO_B2B_Status__c</fullName>
        <label>Commerce Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Published to Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_OMS_Fulfillment_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Bill Macaulay Oct 2022
Used to split Order Summaries onto fulfillment Orders</description>
        <label>Fulfillment Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SCOM_Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SunFusion</fullName>
                </value>
                <value>
                    <fullName>SolarWave</fullName>
                </value>
                <value>
                    <fullName>PhotonPower</fullName>
                </value>
                <value>
                    <fullName>LuminaSol</fullName>
                </value>
                <value>
                    <fullName>StarVolt</fullName>
                </value>
                <value>
                    <fullName>SunSavvy</fullName>
                </value>
                <value>
                    <fullName>Cirrus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_SCOM_OOA_Allowed_Limit__c</fullName>
        <label>B2B Allowed Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sdo_Scom_B2B_Shipping_Cubic_Size__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field will be used to determine the fullness of the truck</description>
        <label>B2B Commerce Shipping Size Cubic Feet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sdo_Scom_Badge1_Label__c</fullName>
        <description>Add a label to your badge when your badge type is Generic, Free shipping or quantity</description>
        <label>Badge1_Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sdo_Scom_Badge1_Type__c</fullName>
        <description>Promotional badge for Product</description>
        <label>Badge1_Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generic Badge</fullName>
                </value>
                <value>
                    <fullName>Price Discount Badge</fullName>
                </value>
                <value>
                    <fullName>Free Shipping Badge</fullName>
                </value>
                <value>
                    <fullName>Product Quantity Badge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sdo_Scom_Badge2_Label__c</fullName>
        <label>Badge2_Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sdo_Scom_Badge2_Type__c</fullName>
        <label>Badge2_Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generic Badge</fullName>
                </value>
                <value>
                    <fullName>Price Discount Badge</fullName>
                </value>
                <value>
                    <fullName>Free Shipping Badge</fullName>
                </value>
                <value>
                    <fullName>Product Quantity Badge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sdo_Scom_IsFreeShippingBadge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this while selecting Free shipping badge</description>
        <label>IsFreeShippingBadge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>B2B Commerce field used on PLP</description>
        <label>Short Description</label>
        <length>102</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spotter_Configuration__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Spotter Configuration</label>
        <referenceTo>Spotter_Configuration__c</referenceTo>
        <relationshipLabel>Linked to Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start_Date_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <label>Warranty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Available</fullName>
                    <default>true</default>
                    <label>Not Available</label>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purl__c</fullName>
        <formula>IF( Image__c != &quot;&quot;, LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + &apos;servlet/servlet.FileDownload?file=&apos; + Image__c,IF( (Image_URL__c != &quot;&quot; &amp;&amp; Image__c == &quot;&quot;), Image_URL__c,&apos;https://s3.amazonaws.com/rcgidoimages/CG/noImage.png&apos;))</formula>
        <label>purl</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>